[gd_scene load_steps=23 format=3 uid="uid://dnx2036sf7bq4"]

[ext_resource type="Script" path="res://scenes/Ring.gd" id="1_brhrb"]
[ext_resource type="Texture2D" uid="uid://dxoo2vnobe6sb" path="res://assets/Boxing Ring_final.png" id="2_swsgw"]
[ext_resource type="Texture2D" uid="uid://bi2fmaa1c4oo5" path="res://assets/healthbar.png" id="3_t8hgb"]
[ext_resource type="Script" path="res://scenes/enemy.gd" id="4_53fqo"]
[ext_resource type="Texture2D" uid="uid://6v8l4hs7ptd0" path="res://assets/SirRendrefinal.png" id="5_okqmo"]
[ext_resource type="Texture2D" uid="uid://ceottxvx481cj" path="res://assets/Sir Rendre_falling_final.png" id="6_wrkwa"]
[ext_resource type="Script" path="res://scenes/player.gd" id="7_h3gfk"]
[ext_resource type="Texture2D" uid="uid://c23bdx0spq35v" path="res://assets/Sarwatt_the_great_final.png" id="7_mp6qw"]
[ext_resource type="Shader" path="res://scenes/Ring.gdshader" id="7_tx2aj"]
[ext_resource type="Texture2D" uid="uid://di1qr2l5diqvn" path="res://assets/Player_fighter_final.png" id="8_2tf0a"]
[ext_resource type="Texture2D" uid="uid://iujj5virgnpb" path="res://assets/Sarwatt_falling_final.png" id="9_el3gm"]
[ext_resource type="Texture2D" uid="uid://s7l7fvh2ykv4" path="res://assets/staminabar.png" id="9_tljn5"]
[ext_resource type="Script" path="res://scenes/ref.gd" id="10_2cm8d"]
[ext_resource type="Texture2D" uid="uid://d0v4pmsrqhtyv" path="res://assets/m'babe_final.png" id="10_fqqhu"]
[ext_resource type="Texture2D" uid="uid://dra7y64dpfwri" path="res://assets/ref_final.png" id="11_42sfq"]
[ext_resource type="Texture2D" uid="uid://r0qhqlvlouc1" path="res://assets/Mbabe_falling_final.png" id="11_pn2yu"]
[ext_resource type="Texture2D" uid="uid://gjc1e1t553g1" path="res://assets/Timer_Text.png" id="12_rac86"]
[ext_resource type="Texture2D" uid="uid://bbk4y8p3hy4ar" path="res://assets/star.png" id="13_c4vc1"]
[ext_resource type="Script" path="res://scenes/star.gd" id="14_rm1ep"]
[ext_resource type="Texture2D" uid="uid://bftaljvi2kwbd" path="res://assets/star_score.png" id="15_fuh13"]
[ext_resource type="Texture2D" uid="uid://cnixw4cqx2iqv" path="res://assets/Round_number.png" id="20_pqx2w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_utibj"]
shader = ExtResource("7_tx2aj")
shader_parameter/onoff = null

[node name="Ring" type="Node2D"]
script = ExtResource("1_brhrb")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(128, 120)
texture = ExtResource("2_swsgw")

[node name="f_healthbar" type="TextureProgressBar" parent="."]
offset_left = 62.0
offset_top = 9.0
offset_right = 124.0
offset_bottom = 20.0
max_value = 96.0
value = 96.0
fill_mode = 1
texture_under = ExtResource("3_t8hgb")
texture_progress = ExtResource("3_t8hgb")
tint_under = Color(0.0823529, 0.0823529, 0.0823529, 1)

[node name="enemy" type="CharacterBody2D" parent="."]
position = Vector2(123, 120)
script = ExtResource("4_53fqo")

[node name="Sprite2D" type="Sprite2D" parent="enemy"]
visible = false
texture_filter = 1
position = Vector2(-12, 61)
texture = ExtResource("5_okqmo")
offset = Vector2(12, -61)
hframes = 12
vframes = 3
frame = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy"]

[node name="Sprite2" type="Sprite2D" parent="enemy"]
visible = false
texture_filter = 1
position = Vector2(-14, 35)
texture = ExtResource("6_wrkwa")
offset = Vector2(14, -35)
hframes = 6
vframes = 2
frame = 7

[node name="Sarwatt" type="Sprite2D" parent="enemy"]
visible = false
material = SubResource("ShaderMaterial_utibj")
texture = ExtResource("7_mp6qw")
hframes = 11
vframes = 3
frame = 23

[node name="Sarwat_fall" type="Sprite2D" parent="enemy"]
visible = false
texture = ExtResource("9_el3gm")
hframes = 6
vframes = 2
frame = 10

[node name="Mbabe" type="Sprite2D" parent="enemy"]
visible = false
texture = ExtResource("10_fqqhu")
hframes = 14
vframes = 2
frame = 16

[node name="Mbabe_fall" type="Sprite2D" parent="enemy"]
visible = false
texture = ExtResource("11_pn2yu")
hframes = 2
vframes = 2

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(110, 155)
script = ExtResource("7_h3gfk")

[node name="Sprite2D" type="Sprite2D" parent="player"]
texture_filter = 1
texture = ExtResource("8_2tf0a")
hframes = 15
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]

[node name="e_healthbar" type="TextureProgressBar" parent="."]
offset_left = 132.0
offset_top = 9.0
offset_right = 194.0
offset_bottom = 20.0
max_value = 96.0
value = 96.0
texture_progress = ExtResource("3_t8hgb")

[node name="f_staminabar" type="TextureProgressBar" parent="."]
offset_left = 55.0
offset_top = 21.0
offset_right = 124.0
offset_bottom = 26.0
max_value = 20.0
value = 20.0
fill_mode = 1
texture_progress = ExtResource("9_tljn5")

[node name="e_staminabar" type="TextureProgressBar" parent="."]
offset_left = 132.0
offset_top = 21.0
offset_right = 201.0
offset_bottom = 27.0
max_value = 35.0
value = 35.0
texture_progress = ExtResource("9_tljn5")

[node name="ref" type="Node2D" parent="."]
position = Vector2(255, 140)
script = ExtResource("10_2cm8d")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="ref"]
texture_filter = 1
texture = ExtResource("11_42sfq")
hframes = 6
vframes = 4
frame = 21

[node name="Timer_Hundreds" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(217, 14)
texture = ExtResource("12_rac86")
hframes = 10

[node name="Timer_Tens" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(233, 14)
texture = ExtResource("12_rac86")
hframes = 10

[node name="Timer_Ones" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(241, 14)
texture = ExtResource("12_rac86")
hframes = 10

[node name="star" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(122, 76)
texture = ExtResource("13_c4vc1")
script = ExtResource("14_rm1ep")

[node name="star_score" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(27, 18)
texture = ExtResource("15_fuh13")
hframes = 3

[node name="round_number" type="Sprite2D" parent="."]
position = Vector2(241, 20)
texture = ExtResource("20_pqx2w")
centered = false
hframes = 3

[connection signal="attack" from="enemy" to="player" method="_on_enemy_attack"]
[connection signal="blocked" from="enemy" to="player" method="_on_enemy_blocked"]
[connection signal="count" from="enemy" to="ref" method="_on_enemy_count"]
[connection signal="count_init" from="enemy" to="ref" method="_on_enemy_count_init"]
[connection signal="health_deplete" from="enemy" to="." method="_on_enemy_health_deplete"]
[connection signal="ko_to_player" from="enemy" to="player" method="_on_enemy_ko_to_player"]
[connection signal="set_speed" from="enemy" to="." method="_on_enemy_set_speed"]
[connection signal="stam_deplete" from="enemy" to="." method="_on_enemy_stam_deplete"]
[connection signal="star" from="enemy" to="star" method="_on_enemy_star"]
[connection signal="count_init" from="player" to="ref" method="_on_player_count_init"]
[connection signal="f_health" from="player" to="." method="_on_player_f_health"]
[connection signal="f_stam" from="player" to="." method="_on_player_f_stam"]
[connection signal="ko_to_enemy" from="player" to="enemy" method="_on_player_ko_to_enemy"]
[connection signal="punch" from="player" to="enemy" method="_on_player_punch"]
[connection signal="score_star" from="player" to="." method="_on_player_score_star"]
[connection signal="set_speed" from="player" to="." method="_on_player_set_speed"]
[connection signal="stam_deplete" from="player" to="enemy" method="_on_player_stam_deplete"]
[connection signal="getup" from="ref" to="enemy" method="_on_ref_getup"]
[connection signal="star_to_player" from="star" to="player" method="_on_star_star_to_player"]
